fixed header navbar spacing

--- a/app/assets/stylesheets/_responsive.scss
+++ b/app/assets/stylesheets/_responsive.scss
@@ -244,7 +244,7 @@
 
   .header__nav {
     ul {
-      gap: 5px;
+      // gap: 20px;
     }
 
     > ul li a {
